--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1914,6 +1914,7 @@ article .post-content .has-content-area {
     font-family: "Roboto";
     font-weight: 400;
     font-size: 15px;
+    padding: 10px 30px;
 }
 
 #comments .comments-topbar div {
