--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1932,6 +1932,10 @@ article .post-content .has-content-area {
     content: '';
 }
 
+#comments .comments-topbar div::last-child:after {
+    display: none;
+}
+
 #comments .comments-topbar div i {
     margin: 0 5px;
 }
