--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1915,7 +1915,6 @@ article .post-content .has-content-area {
     font-family: "Roboto";
     font-weight: 400;
     font-size: 15px;
-    padding: 10px 30px;
     margin: 0 auto;
 }
 
@@ -1924,6 +1923,7 @@ article .post-content .has-content-area {
     justify-content: center;
     align-items: center;
     position: relative;
+    padding: 10px 15px;
 }
 
 #comments .comments-topbar div:after {
@@ -1933,6 +1933,7 @@ article .post-content .has-content-area {
     content: '';
     position: absolute;
     right: 0;
+    bottom: 0;
 }
 
 #comments .comments-topbar div:last-child:after {
