--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1948,6 +1948,7 @@ article .post-content .has-content-area {
 .comment .comment-body {
     display: flex;
     justify-content: flex-start;
+    align-items: center;
 }
 
 
