--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1955,6 +1955,7 @@ article .post-content .has-content-area {
 
 .reply-author {
     color: #e7d117;
+    margin-right: 10px;
 }
 
 .commet-content {
