--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1958,8 +1958,9 @@ article .post-content .has-content-area {
     margin-right: 10px;
 }
 
-.commet-content {
+.comment-content {
     color: #656565;
+    margin: 0px;
 }
 
 
