--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1963,6 +1963,12 @@ article .post-content .has-content-area {
     margin: 0px !important;
 }
 
+.comment-reply-link {
+    border-radius: 20px;
+    background: #e7d117;
+    color: #fff;
+}
+
 
 /* TWITTER SHARE */
 
