--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1967,6 +1967,7 @@ article .post-content .has-content-area {
     border-radius: 20px;
     background: #e7d117;
     color: #fff;
+    padding: 10px 15px;
 }
 
 
