--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1951,6 +1951,7 @@ article .post-content .has-content-area {
     justify-content: flex-start;
     font-family: "Roboto";
     font-size: 15px;
+    margin-top: 0px;
 }
 
 .reply-author {
