--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1969,6 +1969,7 @@ article .post-content .has-content-area {
     background: #e7d117;
     color: #fff;
     padding: 5px 10px;
+    font-size: 12px;
 }
 
 .comment-reply-link:hover,
