--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1985,11 +1985,14 @@ article .post-content .has-content-area {
     color: #e7d117 !important;
     padding: 5px 10px;
     font-size: 12px;
-    font-family: "Roboto"
+    font-family: "Roboto";
+    display: flex;
+    align-items: center;
 }
 
 .edit-link a {
     color: #e7d117 !important;
+    margin-right: 5px;
 }
 
 .edit-link svg {
