--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1952,6 +1952,7 @@ article .post-content .has-content-area {
     font-family: "Roboto";
     font-size: 15px;
     margin-top: 0px;
+    border-bottom: 2px solid #ccc;
 }
 
 .reply-author {
