--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1953,6 +1953,8 @@ article .post-content .has-content-area {
     font-size: 15px;
     margin-top: 0px;
     border-bottom: 2px solid #ccc;
+    margin-bottom: 15px;
+    padding-bottom: 15px;
 }
 
 .reply-author {
