--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2010,6 +2010,8 @@ article .post-content .has-content-area {
     border-left: 2px solid #ccc;
     border-bottom: 0px !important;
     padding-left: 10px;
+    padding-bottom: 0px;
+    margin-bottom: 30px;
 }
 
 #comments .children li {
