--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2018,6 +2018,14 @@ article .post-content .has-content-area {
     padding-left: 30px;
 }
 
+#comment-form input[type="submit"] {
+    border-radius: 20px;
+    background: #e7d117;
+    color: #fff;
+    padding: 5px 10px;
+    font-size: 12px;
+}
+
 
 /* TWITTER SHARE */
 
