--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2018,12 +2018,21 @@ article .post-content .has-content-area {
     padding-left: 30px;
 }
 
+.comment.depth-1 {
+    margin-left: 50px;
+}
+
+#commentform {
+    margin-left: 50px;
+}
+
 #commentform input[type="submit"] {
     border-radius: 20px;
     background: #e7d117;
     color: #fff;
     padding: 10px 15px;
     font-size: 15px;
+    text-transform: lowercase;
 }
 
 
