--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2035,6 +2035,10 @@ article .post-content .has-content-area {
     text-transform: lowercase;
 }
 
+.comment-form-flex #respond+.comments-title {
+    display: none;
+}
+
 
 /* TWITTER SHARE */
 
