--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2024,6 +2024,7 @@ article .post-content .has-content-area {
 
 #commentform {
     margin-left: 50px;
+    margin-right: 50px;
 }
 
 #commentform input[type="submit"] {
