--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2056,6 +2056,10 @@ article .post-content .has-content-area {
     font-size: 15px;
 }
 
+.comment-form-url {
+    display: none;
+}
+
 
 /* TWITTER SHARE */
 
