--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1945,6 +1945,7 @@ article .post-content .has-content-area {
     border-bottom: 2px solid #ccc;
     margin-bottom: 15px;
     padding-bottom: 15px;
+    padding-right: 10px;
 }
 
 .reply-author {
