--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1948,9 +1948,11 @@ article .post-content .has-content-area {
     padding-right: 10px;
 }
 
-.reply-author {
+.comment-form .comment-notes,
+.comment-form label .reply-author {
     color: #e7d117;
     margin-right: 10px;
+    font-size: 14px;
 }
 
 .comment-list {
@@ -2143,3 +2145,5 @@ article .post-content .has-content-area {
 
 
 /* TWITTER SHARE END */
+
+a
