--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1803,7 +1803,7 @@ button {
 
 /* ---------------------------*/
 
-.post-title {
+.post-content {
     margin-top: -60px;
     position: relative;
 }
