--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1831,6 +1831,8 @@ button {
     display: flex;
     justify-content: flex-end;
     font-family: "Bree Serif";
+    font-size: 18px;
+    margin-bottom: 20px;
 }
 
 article .post-content {
