--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1832,7 +1832,8 @@ button {
     justify-content: flex-end;
     font-family: "Bree Serif";
     font-size: 18px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    margin-right: 10px;
 }
 
 article .post-content {
