--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1829,14 +1829,16 @@ button {
 .post-meta {
     color: #fff;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     font-family: "Bree Serif";
     font-size: 16px;
     margin-bottom: 10px;
     margin-right: 10px;
 }
 
-.post-meta .post-time {}
+.post-meta .post-time {
+    margin-right: 20px;
+}
 
 .post-meta .time-ago {
     color: #e7d117;
