--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1832,8 +1832,8 @@ button {
     justify-content: flex-end;
     font-family: "Bree Serif";
     font-size: 16px;
-    margin-bottom: 10px;
-    margin-right: 10px;
+    padding: 5px 10px;
+    background: rgba(0, 0, 0, 0.46);
 }
 
 .post-meta .post-time {
