--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1804,7 +1804,7 @@ button {
 /* ---------------------------*/
 
 .post-content {
-    margin-top: -60px;
+    margin-top: -110px;
     position: relative;
 }
 
@@ -1824,6 +1824,15 @@ button {
     border-top: 2px solid #cccccc;
     border-bottom: 2px solid #cccccc;
     line-height: 20pt
+}
+
+.post-author {
+    color: #fff;
+    display: flex;
+    justify-content: flex-end;
+    font-family: "Bree Serif";
+    font-size: 16px;
+    padding: 5px 10px;
 }
 
 .post-meta {
