--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1845,7 +1845,7 @@ button {
     color: #fff;
 }
 
-.post-author a span img {
+.post-author a img {
     height: 30px;
     width: 30px;
     margin-right: 10px;
