--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1833,6 +1833,8 @@ button {
     font-family: "Bree Serif";
     font-size: 16px;
     padding: 5px 10px;
+    display: inline-block;
+    float: right;
 }
 
 .post-author a {
