--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1838,7 +1838,10 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5px 10px;
+    padding: 0px 10px;
+    padding-left: 0px;
+    border-radius: 20px 0px 0px 20px;
+    font-size: 14px;
 }
 
 .post-author a span {
