--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1811,11 +1811,11 @@ button {
     color: #c4afa1;
     transform: rotate(270deg);
     position: absolute;
-    bottom: 50%;
+    bottom: 168px;
     font-size: 16px;
     height: 40px;
-    width: 100%;
-    left: -122px;
+    width: 300px;
+    left: -134px;
     z-index: 5;
 }
 
