--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -784,6 +784,39 @@ button {
 /* ---------------------------*/
 
 
+/*--------- RELATED HASHTAGS WIDGET */
+
+
+/* ---------------------------*/
+
+.tag-list {
+    list-style-type: none;
+    padding: 0px;
+}
+
+.tag-list li {
+    line-height: 26px;
+    padding: 0px;
+}
+
+.tag-list li a {
+    color: #e7d117;
+    transition: 300ms ease;
+}
+
+.tag-list li a:hover {
+    opacity: 0.8;
+    font-size: 18px;
+    font-family: "Bree Serif";
+}
+
+
+/* RELATED HASHTAGS WIDGET */
+
+
+/* ---------------------------*/
+
+
 /*--------- COMMENTS */
 
 
