--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -807,7 +807,7 @@ button {
 .tag-list li a:hover {
     opacity: 0.8;
     font-size: 18px;
-    font-family: "Bree Serif";
+    font-family: "Bree Serif" !important;
 }
 
 
