--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -800,14 +800,14 @@ button {
 }
 
 .tag-list li a {
-    color: #e7d117;
+    color: #e7d117 !important;
     transition: 300ms ease;
+    font-family: "Bree Serif" !important;
 }
 
 .tag-list li a:hover {
     opacity: 0.8;
     font-size: 18px;
-    font-family: "Bree Serif" !important;
 }
 
 
