--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -789,9 +789,36 @@ button {
 
 /* ---------------------------*/
 
+.tagsrelated-widget.container {
+    display: flex;
+}
+
+.tags-icon {
+    color: #fff;
+    background: #e7d117 !important;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 26px;
+    margin-right: 30px;
+    position: relative;
+}
+
+.tags-icon:after {
+    position: absolute;
+    content: '';
+    height: 100%;
+    width: 2px;
+    background: #e7d117;
+}
+
 .tag-list {
     list-style-type: none;
     padding: 0px;
+    margin: 0px;
 }
 
 .tag-list li {
@@ -803,7 +830,7 @@ button {
     color: #e7d117 !important;
     transition: 300ms ease;
     font-family: "Bree Serif" !important;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 
