--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -794,6 +794,11 @@ button {
 }
 
 .tags-icon {
+    margin-right: 30px;
+    position: relative;
+}
+
+.tags-icon i {
     color: #fff;
     background: #e7d117 !important;
     width: 50px;
@@ -803,8 +808,6 @@ button {
     align-items: center;
     border-radius: 50%;
     font-size: 26px;
-    margin-right: 30px;
-    position: relative;
 }
 
 .tags-icon:after {
