--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -434,16 +434,14 @@ input:-internal-autofill-selected {
 }
 
 .trending-post {
-    display: flex;
     border-bottom: 2px solid #ccc;
     margin-bottom: 50px;
 }
 
 .trending-post .category {
-    width: 20%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     text-align: center;
 }
 
@@ -454,10 +452,6 @@ input:-internal-autofill-selected {
 
 .trending-post .category i {
     color: #b29f93;
-}
-
-.trending-post .entry {
-    width: 80%;
 }
 
 .trending-post .entry img {
