--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -466,7 +466,7 @@ input:-internal-autofill-selected {
 }
 
 .trending-post .category img {
-    font-size: 25px;
+    width: 25px;
     display: block;
 }
 
