--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1153,16 +1153,15 @@ button {
 
 .post-rendered.trending::after {
     content: url('http://142.93.24.13/wp-content/uploads/2019/07/fire-blanco.svg');
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 54px;
+    height: 54px;
     color: #fff;
+    display: block;
     background: #e7d117;
     position: absolute;
     top: 0;
     left: 0;
+    padding: 10px 15px;
 }
 
 
