--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -872,6 +872,7 @@ button {
     padding: 10px 0;
     padding-left: 20px;
     border-bottom: 2px solid #ccc;
+    grid-gap: 5px;
 }
 
 .comment-container {
