--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -100,7 +100,7 @@ h2:before {
 
 .header-navigation {
     margin-left: auto;
-    width: 70%;
+    width: 77%;
 }
 
 .header-menu li {
@@ -217,7 +217,7 @@ h2:before {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    max-width: 900px;
+    max-width: 1100px;
 }
 
 header#masthead {
@@ -1687,6 +1687,7 @@ button {
     opacity: 0;
     transition: 300ms ease;
     transform: translateX(-10px);
+    height: 100%;
 }
 
 
