--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1117,11 +1117,11 @@ button {
     color: #c4afa1;
     transform: rotate(270deg);
     position: absolute;
-    bottom: 50%;
+    bottom: 48%;
     font-size: 16px;
     height: 40px;
     width: 100%;
-    left: -122px;
+    left: -112px;
 }
 
 .hovered .post-category a {
@@ -1191,6 +1191,11 @@ button {
 .post-rendered:hover .hovered .action-links {
     transform: translateY(0px);
     opacity: 1;
+}
+
+.outer-container .post-category {
+    bottom: 60%;
+    left: -156px;
 }
 
 
