--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2325,3 +2325,14 @@ article .post-content .has-content-area {
 
 
 /* TWITTER SHARE END */
+
+
+/* LIKES */
+
+.like {
+    transform: 300ms ease;
+}
+
+.liked {
+    color: #FF0000;
+}
