--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2333,3 +2333,7 @@ article .post-content .has-content-area {
     transition: 300ms ease;
     color: #e7d117 !important;
 }
+
+.placa-content.liked {
+    color: red !important;
+}
