--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2334,6 +2334,6 @@ article .post-content .has-content-area {
     color: #e7d117 !important;
 }
 
-.placa-content.liked {
+.placa-like .liked {
     color: red !important;
 }
