--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2016,8 +2016,8 @@ article .post-content .has-content-area {
 .related-title img {
     border-bottom: 1px solid #fff;
     max-width: 50px;
-    padding: 20px;
     margin-top: -37px;
+    margin-bottom: 20px;
 }
 
 .related-posts {
