--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -863,8 +863,9 @@ button {
 .tagposts-widget .current-tag {
     color: #e7d117;
     padding: 10px 15px;
-    border: 1px solid #e7d117;
+    border: 2px solid #e7d117;
     border-radius: 30px;
+    line-height: 20px;
 }
 
 .tagposts-widget .current-tag a {
