--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -860,6 +860,10 @@ button {
 
 /* ---------------------------*/
 
+.tagposts-widget {
+    font-family: "Bree Serif";
+}
+
 .tagposts-widget .current-tag {
     color: #e7d117;
     padding: 10px 15px;
