--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -870,6 +870,7 @@ button {
     border: 2px solid #e7d117;
     border-radius: 30px;
     line-height: 20px;
+    font-size: 20px;
 }
 
 .tagposts-widget .current-tag a {
