--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -877,6 +877,12 @@ button {
     color: #e7d117;
 }
 
+.tagposts-list a {
+    line-height: 27px;
+    font-size: 18px;
+    color: #b29f93;
+}
+
 
 /* TAG RELATED POSTS WIDGET */
 
