--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2001,7 +2001,7 @@ ul.tagposts-list li {
     align-items: center;
     padding: 0px 10px;
     padding-left: 0px;
-    border-radius: 20px 0px 0px 20px;
+    border-radius: 20px 20px 0px 20px;
     font-size: 14px;
 }
 
@@ -2036,6 +2036,7 @@ ul.tagposts-list li {
 article .post-content {
     margin-left: 50px;
     line-height: 20pt;
+    margin-right: 50px;
 }
 
 article .post-content .has-content-area {
