--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1069,7 +1069,8 @@ ul.tagposts-list li {
 
 /* ADS inside render-posts*/
 
-.render-posts.col-3 #publi1 {
+.render-posts.col-3 #publi1,
+.render-posts.col-3 .post-rendered:first-child {
     order: 1;
 }
 
