--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1073,8 +1073,8 @@ ul.tagposts-list li {
     order: 1;
 }
 
-.render-posts.col-3 .post-rendered:first-child {
-    order: 0;
+.render-posts.col-3 div:nth-child(2) {
+    order: 1;
 }
 
 
