--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1077,6 +1077,11 @@ ul.tagposts-list li {
     order: 1;
 }
 
+.ad-970 {
+    margin: 0 auto;
+    display: block;
+}
+
 
 /* ---------------------------*/
 
