--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1100,6 +1100,12 @@ ul.tagposts-list li {
     grid-template-columns: 1fr 1fr;
 }
 
+.advertical {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 /* ---------------------------*/
 
