--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1098,6 +1098,7 @@ ul.tagposts-list li {
 .col-2-2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-gap: 30px;
 }
 
 .advertical {
