--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1093,7 +1093,7 @@ ul.tagposts-list li {
 .col-1-2 {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-gap: 30px;
+    padding-left: 10px;
 }
 
 .col-2-2 {
