--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1139,7 +1139,7 @@ ul.tagposts-list li {
 .post-recomendado .titulo {
     display: flex;
     justify-content: flex-start;
-    align-content: center;
+    align-items: center;
     color: #b29f93;
 }
 
