--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1152,7 +1152,7 @@ ul.tagposts-list li {
 .post-recomendado .titulo a {
     color: #b29f93;
     border-left: 1px solid #ccc;
-    margin-right: 30px;
+    margin: 0 30px;
     font-size: 16px;
 }
 
