--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1134,6 +1134,7 @@ ul.tagposts-list li {
     background: #f5f8fa;
     border-bottom: 2px solid #e7d117;
     font-size: 16px;
+    padding: 20px 40px;
 }
 
 .post-recomendado .titulo {
