--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1135,6 +1135,7 @@ ul.tagposts-list li {
     border-bottom: 2px solid #e7d117;
     font-size: 16px;
     padding: 20px 40px;
+    color: #e7d117;
 }
 
 .post-recomendado .titulo {
