--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1154,7 +1154,7 @@ ul.tagposts-list li {
 .post-recomendado .titulo a {
     color: #b29f93;
     border-left: 1px solid #ccc;
-    margin: 0 30px;
+    padding: 0 30px;
     font-size: 16px;
     display: inline-block;
 }
