--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1144,7 +1144,6 @@ ul.tagposts-list li {
     align-items: center;
     color: #b29f93;
     border-bottom: 1px solid #ccc;
-    position: relative;
 }
 
 .post-recomendado .titulo img {
@@ -1158,9 +1157,10 @@ ul.tagposts-list li {
     padding: 0 30px;
     font-size: 16px;
     display: inline-block;
+    position: relative;
 }
 
-.post-recomendado .titulo:after {
+.post-recomendado .titulo a:after {
     content: '';
     background: #b29f93;
     width: 30px;
