--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1173,14 +1173,15 @@ ul.tagposts-list li {
 .post-recomendado .titulo a:before {
     content: '';
     background: transparent;
-    width: 10px;
-    height: 10px;
-    transform: rotate(20deg);
+    width: 12px;
+    height: 12px;
+    transform: rotate(-45deg);
     border-right: 2px solid #fff;
     border-bottom: 2px solid #fff;
     position: absolute;
-    right: 0;
-    bottom: 50%;
+    right: 11px;
+    bottom: 45%;
+    z-index: 2;
 }
 
 
