--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1155,6 +1155,7 @@ ul.tagposts-list li {
     color: #b29f93;
     border-left: 1px solid #ccc;
     padding: 0 30px;
+    padding-right: 60px;
     font-size: 16px;
     display: inline-block;
     position: relative;
